--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,12 +17,14 @@
     "@tanstack/react-query": "^5.90.12",
     "@walletconnect/ethereum-provider": "^2.23.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.23.26",
     "lucide-react": "^0.562.0",
-    "next": "16.1.0",
+    "next": "16.1.1",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "recharts": "^3.6.0",
     "tailwind-merge": "^3.4.0",
-    "viem": "^2.43.2",
+    "viem": "^2.43.3",
     "wagmi": "^2.19.5"
   },
   "devDependencies": {
@@ -31,7 +33,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "16.1.0",
+    "eslint-config-next": "16.1.1",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
