some ui changes in

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,12 +10,17 @@
   },
   "dependencies": {
     "@base-org/account": "^2.5.1",
+    "@fontsource/inter": "^5.2.8",
+    "@fontsource/outfit": "^5.2.8",
+    "@fontsource/space-grotesk": "^5.2.10",
     "@metamask/sdk": "^0.34.0",
     "@rainbow-me/rainbowkit": "^2.2.10",
     "@safe-global/safe-apps-provider": "^0.18.6",
     "@safe-global/safe-apps-sdk": "^9.1.0",
     "@tanstack/react-query": "^5.90.12",
+    "@types/canvas-confetti": "^1.9.0",
     "@walletconnect/ethereum-provider": "^2.23.1",
+    "canvas-confetti": "^1.9.4",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.26",
     "lucide-react": "^0.562.0",
